# oscars_project

./: .gitignore  README.md  pyproject.toml
frontend/: Memory Palace Builder main.tsx
src/: main.py  routes.py
